[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://source/UI/button/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/UI/button/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/UI/button/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/UI/button/ContinueButton.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBackground" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -115.0
margin_right = 75.0
margin_bottom = 115.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -85.0
margin_right = 45.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="Buttons" instance=ExtResource( 2 )]
margin_right = 90.0
margin_bottom = 35.0

[node name="ContinueButton" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 45.0
margin_right = 90.0
margin_bottom = 80.0

[node name="OptionsButton" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 90.0
margin_bottom = 125.0

[node name="QuitButton" parent="Buttons" instance=ExtResource( 4 )]
margin_top = 135.0
margin_right = 90.0
margin_bottom = 170.0

[connection signal="pressed" from="Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
